# DeepAgent-Console

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  agent.py  api.py  config.py  main.py  schemas.py  session_store.py  skills.py
app/mcp/: __init__.py  mock_server.py  service.py
app/static/: app.js  index.html  logs.html  logs.js  styles.css
skills/code-review/: SKILL.md
skills/data-analysis/: SKILL.md
skills/test-generator/: SKILL.md
tests/: test_agent.py  test_config.py  test_session_store.py  test_skills.py
