[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydantic-agent-web-console"
version = "0.1.0"
description = "A local web console built on the Pydantic AI stack with skills and MCP server management."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic-settings>=2.4.0",
  "pydantic-ai-slim>=1.107.0",
  "httpx>=0.27.0",
  "mcp>=1.28.0",
  "openai>=2.43.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-p no:cacheprovider"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app", "app.*"]

[tool.setuptools.package-data]
app = ["static/*"]
